<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background"
        android:hint="@string/reason_for_decline"
        android:padding="15dp"
        android:textColorHint="#570213"
        android:textColor="#570213"
        android:id="@+id/decline"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_feedback"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:id="@+id/submit_btn"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_feedback"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="110dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:id="@+id/cancel_btn"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>